# auto-research-on-databricks-serverless

./: .gitignore  README.md  evaluate.py  prepare.py  program.md  pyproject.toml  train.py
assets/: architecture.md
databricks_resources/: cluster_spec.json  job_definition.json  setup_volumes.py
docs/: all_runs_summary.md  article.md  auto_research_results_final.tsv  auto_research_v2_final.json  auto_research_v2_results.tsv  auto_research_v3_final.json  auto_research_v3_results.tsv  decisions.md  eval_v3_best_vs_sonnet.json  karpathy_gap_analysis.md  plot_trajectory.py  progress.md  quick_eval_best_adapter.json  quick_eval_results.json  v2_observations.md
notebooks/: 01_test_training.py  02_quick_eval.py  03_auto_research_v1.py  04_auto_research_v2.py  05_auto_research_v3.py
orchestrator/: agent_loop.py  config.py  submit_training.py
skill/: SKILL.md
skill/references/: experiment_budgeting.md  hardware_guide.md  mlflow_tracking.md  training_methods.md  troubleshooting.md
skill/scripts/: dataset_inspector.py  estimate_cost.py  train_sft_lora.py
